--- a/layouts/main.html
+++ b/layouts/main.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{$title}}</title>
-</head>
-
-<body>
-    <header></header>
-    <main>
-        {{$content}}
-    </main>
-    <footer>{{$contandor_img}}</footer>
-</body>
-
-</html>
+{{content}}
