--- a/components/publication/post.html
+++ b/components/publication/post.html
@@ -118,13 +118,33 @@
     height: 30px;
     margin-right: 10px;
   }
-  .post-comment input {
+  .post-comment textarea {
     width: 100%;
+    height: 2rem;
     padding: 8px 10px;
     border: 0;
     border-radius: 20px;
     font-size: 14px;
     background-color: var(--background-input);
+    resize: none;
+    outline: none;
+  }
+  .post-comment textarea:not(:placeholder-shown) ~ .comment-send-post {
+    display: block;
+  }
+  .post-comment .comment-send-post {
+    margin-left: 1rem;
+    display: none;
+  }
+  .post-comment .comment-send-post button {
+    background: none;
+    border: none;
+    color: #606770;
+    font-size: 14px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 </style>
 
@@ -185,10 +205,10 @@
         src="{{imagen_perfil}}"
         width="30"
       />
-      <input
-        placeholder="Comentar como {{usuario_actual}}"
-        type="text"
-      />
+      <textarea placeholder="Comentar como {{usuario_actual}}"></textarea>
+      <div class="comment-send-post">
+        <button><i class="fas fa-paper-plane"></i></button>
+      </div>
     </div>
   </div>
 </div>
