style: Eliminar clase del textarea

--- a/components/publication/input-post.html
+++ b/components/publication/input-post.html
@@ -153,10 +153,7 @@
       <span>{{autor_post}}</span>
     </div>
     <div class="create-post-input">
-      <textarea
-        class="post-input"
-        placeholder="¿Qué estás pensando?"
-      ></textarea>
+      <textarea placeholder="¿Qué estás pensando?"></textarea>
     </div>
     <div class="create-post-actions">
       <button>Publicar</button>
