--- a/components/publication/post.html
+++ b/components/publication/post.html
@@ -1,7 +1,8 @@
 <style>
   .post-container {
-    /* width: 500px; */
-    /* margin: 20px auto; */
+    width: 100%;
+    max-width: 680px;
+    margin: 0 auto;
     margin-bottom: 20px;
     background-color: #fff;
     border: 1px solid #dddfe2;
