--- a/layouts/header.html
+++ b/layouts/header.html
@@ -1,14 +1,55 @@
 <style>
-  header {
+  .header {
     background-color: var(--background-primary);
-    color: var(--text-color);
-    padding: 10px;
-    text-align: center;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+  }
+  .header .logo {
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
+  }
+  .header img {
+    /* width: 30px; */
+    height: 30px;
+    padding: 5px 10px;
+    border-radius: 20px;
+    /* border: 1px solid #dddfe2; */
+  }
+  .header .icons {
+    display: flex;
+    align-items: center;
+    /* background-color: red; */
+  }
+  .header .icons i {
+    margin: 0 10px;
+    font-size: 20px;
+    color: #606770;
   }
 </style>
-<header>
-  <div>
+
+<div class="header">
+  <div class="logo">
+    <img
+      src="https://cdn-icons-png.flaticon.com/512/9942/9942115.png"
+      alt=""
+    />
     <span>Social Media</span>
   </div>
-</header>
+  <div class="icons">
+    <i class="fas fa-home"> </i>
+    <i class="fas fa-tv"></i>
+    <i class="fas fa-store"></i>
+    <i class="fas fa-users"></i>
+    <i class="fas fa-bell"></i>
+    <i class="fas fa-user-circle"></i>
+  </div>
+</div>
