style: Definir el diseño de la barra de scroll

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,21 @@
   --button-secondary-hover: #d8dadf;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--background-primary);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--primary-color);
+  border-radius: 10px;
+}
+
 * {
   margin: 0;
   padding: 0;
