style: Renombrar clase en input-post y agregar estilos para corregir el diseño

--- a/components/publication/input-post.html
+++ b/components/publication/input-post.html
@@ -1,9 +1,12 @@
 <style>
-  .post-container {
+  .post-container-create {
     background-color: var(--background-primary);
     border-radius: 8px;
     padding: 10px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    max-width: 680px;
+    margin: 0 auto;
+    margin-bottom: 10px;
   }
   .post-header {
     display: flex;
@@ -115,7 +118,7 @@
   }
 </style>
 
-<div class="post-container">
+<div class="post-container-create">
   <div class="post-header">
     <img
       alt="Profile picture"
