style: Menu izquierdo como sticky. fast-menu

--- a/components/aside/fast-menu.html
+++ b/components/aside/fast-menu.html
@@ -1,4 +1,13 @@
 <style>
+  .fast-menu {
+    height: 100%;
+    position: relative;
+  }
+  .fast-menu-container {
+    position: sticky;
+    top: 50px;
+    left: 0;
+  }
   .fast-menu-item {
     display: flex;
     align-items: center;
