refactor: Agregar variable del id del usuario actual

--- a/components/aside/fast-menu.html
+++ b/components/aside/fast-menu.html
@@ -50,7 +50,7 @@
 <div class="fast-menu">
   <div class="fast-menu-container">
     <a
-      href="#"
+      href="/user/{{id_usuario_actual}}/"
       class="fast-menu-item"
     >
       <img src="{{imagen_perfil}}" />
