refactor: Cambiar las rutas de las referencias

--- a/components/aside/fast-menu.html
+++ b/components/aside/fast-menu.html
@@ -57,7 +57,7 @@
       <span>{{usuario_actual}}</span>
     </a>
     <a
-      href="#"
+      href="/amigos/"
       class="fast-menu-item"
     >
       <div class="icon">
@@ -66,7 +66,7 @@
       <span>Amigos</span>
     </a>
     <a
-      href="#"
+      href="/imagenes/"
       class="fast-menu-item"
     >
       <div class="icon">
@@ -75,7 +75,7 @@
       <span>Imágenes</span>
     </a>
     <a
-      href="#"
+      href="/videos/"
       class="fast-menu-item"
     >
       <div class="icon">
