style: Modificar las clases del post

--- a/components/publication/post.html
+++ b/components/publication/post.html
@@ -39,22 +39,22 @@
     flex-wrap: wrap;
     gap: 10px;
   }
-  .post-images img {
+  .post-images .visual {
     height: auto;
   }
-  .post-images img:nth-child(1):nth-last-child(1) {
+  .post-images .visual:nth-child(1):nth-last-child(1) {
     width: 100%;
   }
-  .post-images img:first-child:nth-last-child(2),
-  .post-images img:first-child:nth-last-child(2) ~ img {
+  .post-images .visual:first-child:nth-last-child(2),
+  .post-images .visual:first-child:nth-last-child(2) ~ .visual {
     width: calc(50% - 5px);
   }
-  .post-images img:first-child:nth-last-child(3),
-  .post-images img:first-child:nth-last-child(3) ~ img {
+  .post-images .visual:first-child:nth-last-child(3),
+  .post-images .visual:first-child:nth-last-child(3) ~ .visual {
     width: calc(33.33% - 7px);
   }
-  .post-images img:first-child:nth-last-child(4),
-  .post-images img:first-child:nth-last-child(4) ~ img {
+  .post-images .visual:first-child:nth-last-child(4),
+  .post-images .visual:first-child:nth-last-child(4) ~ .visual {
     width: calc(50% - 5px);
   }
   .post-reactions {
