--- a/views/components/publication/post.html
+++ b/views/components/publication/post.html
@@ -42,6 +42,9 @@
   .post-images .visual {
     height: auto;
   }
+  .post-images video {
+    object-fit: cover;
+  }
   .post-images .visual:nth-child(1):nth-last-child(1) {
     width: 100%;
   }
