refactor: Imprimir descripcion en vez de button en details html

--- a/views/components/aside/details.html
+++ b/views/components/aside/details.html
@@ -48,7 +48,10 @@
   <div class="content-detalles">
     <h2>Detalles</h2>
     <div class="details">
-      <button class="button">Agregar presentación</button>
+      <div class="info">
+        <i class="fas pencil"></i>
+        {{descripcion}}
+      </div>
       <div class="info">
         <i class="fas fa-home"></i>
         Vive en {{lugar_vive}}
@@ -58,7 +61,6 @@
         De {{lugar_origen}}
       </div>
       <button class="button">Editar detalles</button>
-      <button class="button">Agregar destacados</button>
     </div>
   </div>
 </div>
