perf: Eliminar comentario en post html y remplazar con variable content_comentarios

--- a/views/components/publication/post.html
+++ b/views/components/publication/post.html
@@ -199,23 +199,7 @@
   </div>
   <div class="post-comment">
     <div class="historial-comment {{view_comment}}">
-      <img src="{{imagen_autor_comentario}}" />
-      <div class="comment-content">
-        <div class="author">{{usuario_comentario}}</div>
-        <div class="text">{{contenido_comentario}}</div>
-      </div>
-    </div>
-    <div class="container-comment">
-      <img
-        alt="Profile picture"
-        height="30"
-        src="{{imagen_perfil}}"
-        width="30"
-      />
-      <textarea placeholder="Comentar como {{usuario_actual}}"></textarea>
-      <div class="comment-send-post">
-        <button><i class="fas fa-paper-plane"></i></button>
-      </div>
+      {{content_comentarios}}
     </div>
   </div>
 </div>
