--- a/views/components/aside/amigos.html
+++ b/views/components/aside/amigos.html
@@ -1,9 +1,11 @@
 <style>
   .amigos-container {
     width: 100%;
+    height: 100%;
   }
   .amigos-content {
-    margin-bottom: 10px;
+    position: sticky;
+    top: 4rem;
   }
   .amigos-content h2 {
     font-size: 18px;
