--- a/views/components/amigos/no-friend-card.html
+++ b/views/components/amigos/no-friend-card.html
@@ -6,6 +6,7 @@
     overflow: hidden;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     background-color: white;
+    height: fit-content;
   }
 
   .card-no-amigo .container-img {
