--- a/styles/style.css
+++ b/styles/style.css
@@ -33,6 +33,11 @@
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 body {
   font-family: Arial, sans-serif;
   background-color: var(--background-secondary);
