style: Eliminar posición sticky

--- a/views/components/aside/details.html
+++ b/views/components/aside/details.html
@@ -1,15 +1,13 @@
 <style>
   .information-user {
     width: 100%;
-    height: 100%;
+    margin-bottom: 1rem;
   }
   .information-user .content-detalles {
     border-radius: 8px;
     background-color: white;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 1rem;
-    position: sticky;
-    top: calc(50px + 1rem);
   }
   .information-user h2 {
     font-size: 18px;
